specs/syntax_specification.txt
# Context-free Grammar

program                 = item_list | EPSILON
item_list               = item_list item | item
item                    = function_def | statement

function_def            = DEF ID LPAREN param_list RPAREN ARROW type COLON NEWLINE INDENT statement_list DEDENT
param_list              = params | EPSILON
params                  = params COMMA param | param
param                   = ID COLON type
type                    = INT_TYPE | BOOL_TYPE | LIST_TYPE LBRACK INT_TYPE RBRACK

statement_list          = statement_list statement | statement
statement               = simple_statement NEWLINE | compound_statement | NEWLINE | COMMENT NEWLINE (NOTE: we are just allowing comments on their own line)
simple_statement        = assignment_statement | return_statement
compound_statement      = if_statement | while_statement

assignment_statement    = ID EQ expression
if_statement            = IF expression COLON NEWLINE INDENT statement_list DEDENT | IF expression COLON NEWLINE INDENT statement_list DEDENT ELSE COLON NEWLINE INDENT statement_list DEDENT
while_statement         = WHILE expression COLON NEWLINE INDENT statement_list DEDENT
return_statement        = RETURN expression

# NOTE: ordered by precedence, lowest to highest
expression              = or_expression
or_expression           = or_expression OR and_expression | and_expression
and_expression          = and_expression AND not_expression | not_expression
not_expression          = NOT not_expression | comparison
comparison              = comparison LESSEQ arith_expression | comparison LESS arith_expression | comparison GREATER arith_expression | comparison GREATEREQ arith_expression | comparison EQOP arith_expression | comparison NEQ arith_expression | arith_expression
arith_expression        = arith_expression PLUS term | arith_expression MINUS term | term
term                    = term TIMES factor | term DIVIDE factor | term MODULO factor | factor

# NOTE: ordered by precedence, lowest to highest (when read left to right in this case)
factor                  = MINUS factor | INT | TRUE | FALSE | ID | ID LPAREN args_list RPAREN | ID LBRACK expression RBRACK | LPAREN expression RPAREN | list_literal | LEN LPAREN expression RPAREN

list_literal            = LBRACK RBRACK | LBRACK expr_list RBRACK
expr_list               = expr_list COMMA expression | expression
args_list               = expr_list | EPSILON

EPSILON                 = <Nothing>
